# image-gen-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DISTRIBUTION.md  MANIFEST.in  README.md  pyproject.toml  test-installation.sh
.github/prompts/: plan.prompt.md  specify.prompt.md  tasks.prompt.md
.github/workflows/: ci.yml  dependencies.yml  manual-release.yml  release.yml
docs/: distribution.md  embedded-resources.md  engine.md  schema.md  spec.md
image_gen_mcp/: __init__.py  exceptions.py  main.py  schema.py  settings.py
image_gen_mcp/engines/: __init__.py  factory.py
image_gen_mcp/engines/ar/: gemini.py  openai.py  openrouter.py
image_gen_mcp/engines/diffusion/: dalle_diffusion.py  vertex_imagen.py
image_gen_mcp/shard/: enums.py  instructions.py
image_gen_mcp/utils/: error_helpers.py  image_utils.py  prompt.py
src/: main.py  schema.py  settings.py
src/engines/: base_engine.py  factory.py
src/engines/diffusion/: dalle_diffusion.py
src/shard/: constants.py  instructions.py
src/utils/: async_utils.py  error_helpers.py  http.py  image_utils.py  logging.py  provenance.py
tests/: conftest.py  test_exceptions_runtime.py  test_factory.py  test_fast_fail_provider.py  test_image_saving.py  test_main.py  test_model_capability_validation.py  test_new_error_handling.py  test_schema.py
tests/engines/: test_engine_image_utils_inheritance.py  test_openrouter_ar.py  test_vertex_imagen.py
