[project]
name = "image-gen-mcp"
version = "0.1.0"
description = "MCP image generation server with modular engines and routing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "mcp>=1.0.0",
  "typing-extensions>=4.12.0",
  "openai>=1.40.0",
  "google-genai>=0.3.0",
  "fastmcp>=2.12.2",
  "httpx>=0.27.0",
  "jinja2>=3.1.6",
  "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "pyright>=1.1.379"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 240
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 240

[tool.ruff]
line-length = 240
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "W", # see: https://pypi.org/project/pycodestyle
    "F", # see: https://pypi.org/project/pyflakes
]
ignore = [
    "E731", # Do not assign a lambda expression, use a def
    "F811", # dispatch function
]
# Exclude a variety of commonly ignored directories.
exclude = [".git"]
ignore-init-module-imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -r a --color=yes"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
# Enable pytest-asyncio to auto-detect event loop usage
asyncio_mode = "auto"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.pylint.messages_control]
max-line-length = 120
disable = [
    # intentionally turned off
    "broad-except",
    "c-extension-no-member",
    "comparison-with-itself",
    "import-error",
    "import-outside-toplevel",
    "invalid-name",
    "invalid-unary-operand-type",
    "line-too-long",
    "no-else-continue",
    "no-else-raise",
    "no-else-return",
    "no-member",
    "no-name-in-module",
    "not-an-iterable",
    "overridden-final-method",
    "pointless-statement",
    "redundant-keyword-arg",
    "singleton-comparison",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unexpected-keyword-arg",
    "ungrouped-imports",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unsupported-membership-test",
    "unused-import",
    "use-implicit-booleaness-not-comparison",
    "use-implicit-booleaness-not-len",
    "wrong-import-order",
    "wrong-import-position",

    # misc
    "abstract-class-instantiated",
    "no-value-for-parameter",
    "undefined-variable",
    "unpacking-non-sequence",

    # pylint type "C": convention, for programming standard violation
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-many-lines",
    "unidiomatic-typecheck",
    "unnecessary-dunder-call",
    "unnecessary-lambda-assignment",

    # pylint type "R": refactor, for bad code smell
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    "inconsistent-return-statements",
    "redefined-argument-from-local",
    "too-few-public-methods",

    # pylint type "W": warning, for python specific problems
    "abstract-method",
    "arguments-differ",
    "arguments-out-of-order",
    "arguments-renamed",
    "attribute-defined-outside-init",
    "comparison-with-callable",
    "dangerous-default-value",
    "deprecated-module",
    "eval-used",
    "expression-not-assigned",
    "fixme",
    "global-statement",
    "invalid-overridden-method",
    "keyword-arg-before-vararg",
    "possibly-unused-variable",
    "protected-access",
    "raise-missing-from",
    "redefined-builtin",
    "redefined-outer-name",
    "self-cls-assignment",
    "signature-differs",
    "super-init-not-called",
    "try-except-raise",
    "unnecessary-lambda",
    "unspecified-encoding",
    "unused-argument",
    "unused-variable",
    "using-constant-test",
    "logging-fstring-interpolation",
    "unsupported-binary-operation",
]
